# wsctables

./: .gitmodules  Dockerfile  LICENSE.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: docker-publish.yml  pylint.yml
src/wscearth/: __init__.py  __main__.py  earth.py  influx.py  route.py  views.py
src/wscearth/templates/: positions.js.j2  positions_map.html
src/wsctables/: __init__.py  __main__.py  views.py
src/wsctables/static/: style.css
src/wsctables/templates/: scrutineering.js.j2  tables.html.j2  wsctables.js.j2
