[metadata]
name = wscearth
url=https://github.com/worldsolarchallenge/wscearth

description = "World Solar Challenge Google Earth visualisation"
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown

author = "David Snowdon"
author_email = ""

maintainer = "David Snowdon"
maintainer_email = ""

license = "BSD 3-Clause License"
license_files = file: LICENSE

keywords = pytest, eos

classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing

project_urls =
    Source = https://github.com/worldsolarchallenge/wscearth
    Tracker = https://github.com/worldsolarchallenge/wscearth/issues
    Documentation = https://github.com/worldsolarchallenge/wscearth

[options]
packages = find:

package_dir=
    =src

include_package_data = True

install_requires =
    Flask==2.3.3
    Werkzeug
    Jinja2
    flask-googlemaps
    Flask-CacheControl
    Flask-Caching
    flask_cors
    influxdb3-python
    pandas
    simplejson
    simplekml

[options.packages.find]
where=src

[options.package_data]
* = README.md